--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <script type="text/javascript" src="js/framework7.min.js"></script>
     <!-- Path to your app js-->
     <script type="text/javascript" src="js/index.js"></script>
+     <script type="text/javascript" src="js/SocialSharing.js"></script>
    
   </body>
 </html>
