--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <!-- Path to your app js-->
     <script type="text/javascript" src="js/index.js"></script>
      <script type="text/javascript" src="js/SocialSharing.js"></script>
+     <script type="text/javascript" src="cordova.js"></script>
    
   </body>
 </html>
