--- a/animal.html
+++ b/animal.html
@@ -119,7 +119,7 @@
                    <i class="fa fa-files-o fa-lg hvr-icon-pop" id="bottom-btn-copy-hidden" aria-hidden="true"></i>
                     <i class="fa fa-forward fa-lg hvr-icon-pop" id="bottom-btn-forward-hidden"  aria-hidden="true"></i>
                     <i class="fa fa-heart fa-lg hvr-icon-pop" id="bottom-btn-favorite-hidden"  aria-hidden="true"></i>
-                    <i class="fa fa-share-alt fa-lg hvr-icon-pop" id="bottom-btn-share-hidden" aria-hidden="true" ></i>
+                    <i class="fa fa-share-alt fa-lg hvr-icon-pop" id="bottom-btn-share-hidden" aria-hidden="true" onclick="shareFaceBook()" ></i>
                 
               </div>
             </div>
