--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <!-- Path to your app js-->
     <script type="text/javascript" src="js/index.js"></script>
      <script type="text/javascript" src="js/SocialSharing.js"></script>
+      <script type="text/javascript" src="js/Screenshot.js"></script>
     
    
   </body>
