--- a/animal.html
+++ b/animal.html
@@ -115,11 +115,11 @@
             <!-- Bottom Toolbar. In Material theme it should be inside of the page-->
             <div class="toolbar main-home-nav">
               <div class="toolbar-inner">
-                    <button onclick="window.plugins.socialsharing.share('Message only')">message only</button>
+                     
                    <i class="fa fa-files-o fa-lg hvr-icon-pop" id="bottom-btn-copy-hidden" aria-hidden="true"></i>
                     <i class="fa fa-forward fa-lg hvr-icon-pop" id="bottom-btn-forward-hidden"  aria-hidden="true"></i>
                     <i class="fa fa-heart fa-lg hvr-icon-pop" id="bottom-btn-favorite-hidden"  aria-hidden="true" onclick="printScreen()"></i>
-                    <i class="fa fa-share-alt fa-lg hvr-icon-pop" id="bottom-btn-share-hidden" aria-hidden="true" onclick="shareFaceBook()" ></i>
+                    <i class="fa fa-share-alt fa-lg hvr-icon-pop" id="bottom-btn-share-hidden" aria-hidden="true" onclick="shareFact()" ></i>
                 
               </div>
             </div>
