--- a/favorite.html
+++ b/favorite.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/framework7.ios.min.css">
     <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
     <!-- Path to your custom app styles-->
-    <link rel="stylesheet" href="css/random.css">
+    <link rel="stylesheet" href="css/favorite.css">
     <link rel="stylesheet" href="css/shared.css">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
      <script src="js/jquery-3.1.1.js"> </script>
