--- a/africa.html
+++ b/africa.html
@@ -44,7 +44,7 @@
                         <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
                     </a>
                 </div>
-                <div class="center" style="color:white">Animal Fact</div>
+                <div class="center" style="color:white">Africa Fact</div>
               </div>
               
             </div>
