--- a/africa.html
+++ b/africa.html
@@ -95,6 +95,7 @@
       
     <script type="text/javascript" src="js/africa.js"></script>
     <script type="text/javascript" src="js/share.js"></script>
+    <script type="text/javascript" src="js/tts.js"></script>
     
   </body>
 </html>
