--- a/food.html
+++ b/food.html
@@ -74,6 +74,7 @@
  
             <!-- Scrollable page content -->
             <div class="page-content picture-background">
+                '<div class="mic"><i class="fa fa-microphone" aria-hidden="true"></i></div>'
                   <p class="text-copied">Text Copied</p>
                    <div class="swiper-custom">
                     <div class="swiper-container">
