--- a/antarctica.html
+++ b/antarctica.html
@@ -64,10 +64,10 @@
             <div class="toolbar main-home-nav">
               <div class="toolbar-inner">
                      
-                   <i class="fa fa-files-o fa-lg" id="bottom-btn-copy-hidden" aria-hidden="true"></i>
-                    <i class="fa fa-forward fa-lg " id="bottom-btn-forward-hidden"  aria-hidden="true"></i>
-                    <i class="fa fa-heart fa-lg" id="bottom-btn-favorite-hidden"  aria-hidden="true" onclick="favoriteFact()"></i>
-                    <i class="fa fa-share-alt fa-lg" id="bottom-btn-share-hidden" aria-hidden="true" onclick="shareFact()" ></i>
+                   <i class="fa fa-files-o fa-2x" id="bottom-btn-copy-hidden" aria-hidden="true"></i>
+                    <i class="fa fa-forward fa-2x " id="bottom-btn-forward-hidden"  aria-hidden="true"></i>
+                    <i class="fa fa-heart fa-2x" id="bottom-btn-favorite-hidden"  aria-hidden="true" onclick="favoriteFact()"></i>
+                    <i class="fa fa-share-alt fa-2x" id="bottom-btn-share-hidden" aria-hidden="true" onclick="shareFact()" ></i>
                 
               </div>
             </div>
