--- a/animal.html
+++ b/animal.html
@@ -44,7 +44,12 @@
                         <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
                     </a>
                 </div>
-                <div class="center" style="color:white">Animal Fact</div>
+                <div class="center" style="color:white">Animal Fact
+                
+                </div>
+                 <div class="right">
+                    <i class="fa fa-microphone fa-2x" aria-hidden="true" id="text-to-speak" style="display:none; padding:20px" onclick="alert('touching')"></i>
+                  </div>
               </div>
               
             </div>
