--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
     <!-- Path to your custom app styles-->
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/shared.css">
+    
     
   </head>
   <body>
