--- a/favorite.html
+++ b/favorite.html
@@ -39,6 +39,9 @@
                     </a>
                 </div>
                 <div class="center" style="color:white">Favorite Fact</div>
+                  <div class="right">
+                    <i class="fa fa-microphone fa-2x" aria-hidden="true" id="text-to-speak" style="display:none; padding:20px" onclick="text_to_speak()"></i>
+                  </div>
               </div>
             </div>
             
