--- a/body.html
+++ b/body.html
@@ -42,6 +42,9 @@
                     </a>
                 </div>
                 <div class="center" style="color:white">Body Fact</div>
+                  <div class="right">
+                    <i class="fa fa-microphone fa-2x" aria-hidden="true" id="text-to-speak" style="display:none; padding:20px" onclick="text_to_speak()"></i>
+                  </div>
               </div>
               
             </div>
