--- a/antarctica.html
+++ b/antarctica.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="center" style="color:white">Antarctica Fact</div>
                   <div class="right">
-                    <i class="fa fa-microphone fa-2x" aria-hidden="true" id="text-to-speak" style="display:none; padding:20px" onclick="text_to_speak()"></i>
+                    <i class="fa fa-microphone fa-2x" aria-hidden="true" id="text-to-speak" style="opacity:0; padding:20px" onclick="text_to_speak()"></i>
                   </div>
               </div>
               
