--- a/favorite.html
+++ b/favorite.html
@@ -17,6 +17,9 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/favorite.css">
     <link rel="stylesheet" href="css/shared.css">
+    <link rel="stylesheet" href="js/Screenshot.js">
+    <link rel="stylesheet" href="js/SocialSharing.js">
+    <link rel="stylesheet" href="js/tts.js">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
      <script src="js/jquery-3.1.1.js"> </script>
   </head>
@@ -40,7 +43,7 @@
                 </div>
                 <div class="center" style="color:white">Favorite Fact</div>
                   <div class="right">
-                    <i class="fa fa-microphone fa-2x" aria-hidden="true" id="text-to-speak" style="display:none; padding:20px" onclick="text_to_speak()"></i>
+                    <i class="fa fa-microphone fa-2x" aria-hidden="true" id="text-to-speak" style="opacity:0; padding:20px" onclick="text_to_speak()"></i>
                   </div>
               </div>
             </div>
