--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="page-content colortest">
                <div class="splash-page">
                 <h1>Factzilla</h1>
-                <a href="africa.html" class="hvr-bounce-in btn-full hvr-grow external">Enter</a>
+                <a href="random.html"s class="hvr-bounce-in btn-full hvr-grow external">Enter</a>
                 </div>
             </div>
           </div>
