--- a/history.html
+++ b/history.html
@@ -25,6 +25,7 @@
       <script type="text/javascript" src="js/SocialSharing.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
          <script type="text/javascript" src="js/tts.js"></script>
+          <script type="text/javascript" src="js/mMedia.js"></script>
      
 
      
