--- a/history.html
+++ b/history.html
@@ -30,7 +30,7 @@
 
      
   </head>
-  <body>
+  <body onload="onLoad()">
     <!-- Views -->
     <div class="views">
       <!-- Your main view, should have "view-main" class -->
