--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
           <div data-page="index" class="page">
             <!-- Scrollable page content -->
             <div class="page-content colortest">
+              <button onclick="createSelectedBanner()">Add Button</button>
                <div class="splash-page">
                 <h1>Factzilla</h1>
                 <a href="random.html"s class="hvr-bounce-in btn-full hvr-grow external">Enter</a>
                 </div>
+                
             </div>
           </div>
         </div>
