--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Path to your custom app styles-->
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/shared.css">
-     <script type="text/javascript" src="js/mMedia.js"></script>
+    <script type="text/javascript" src="js/MobFox.js"></script>
     
     
   </head>
